# nss-docker

./: .gitignore  .travis.yml  COPYING  Makefile.am  Makefile.in  NEWS.md  README.md  aclocal.m4  config.h.in  configure  configure.ac  makedist.sh  makerelease.sh
m4/: arg_with_define_string.m4  arg_with_quoted.m4  arg_with_string.m4
man/: Makefile.am  Makefile.in  nss-docker.8  nss-docker.pod
src/: Makefile.am  Makefile.in  libnss_docker.c  libnss_docker_lxc.c
test/: Makefile.am  Makefile.in  testtree.sh
test/src/: Makefile.am  Makefile.in  test-docker-api-client.c  test-docker-api-server.c
test/t/: 00echo.t  10mock-server.t  20getent.t  mock-server.t  socket-af_unix.t
